2010-02-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Rename FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m as
	FiltersToolbox/scinrrd_optimal_intersecting_plane.m.

	* FiltersToolbox/scinrrd_intersect_plane.m:

	- When sampling with interpn(), it is necessary to provide the
	grid matrices in the same order as they are generated by ndgrid().

	* Add FileFormatToolbox/scinrrd_seg3d2matlab.m:

	- SCINRRD_SEG3D2MATLAB Correct dimensions of data loaded from SCI
	NRRD so that rows and columns will follow Matlab's coordinates.

	* FiltersToolbox/scinrrd_ndgrid.m:

	- Fix bug. Limits for x-coordinates were used for y-coordinates
	and viceversa.

2010-02-08  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:

	- Remove temporal code. Add avals, vvals, mvals as output
	arguments to monitor evolution of optimisation algorithm. Add v0,
	rad as input arguments, so that the initial vector is not hard
	coded, and radius of smoothing operators.

2010-02-07  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scirunnrrd_optimal_intersecting_plane.m:

	- Remove quaternions and use the normal vector to the plane as
	optimization variable. The function has some debugging code, it's
	still in development. The optimisation is getting trapped in local
	minima; it's not clear whether this is because of the
	trabeculations, or because the normal vector is not a good
	parameter to optimise.

2010-02-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/scinrrd_intersect_plane.m:

	- SCINRRD_INTERSECT_PLANE  Compute intersection of a plane with an
	SCI NRRD image volume.

	* Add FiltersToolbox/scinrrd_squeeze.m:

	- SCINRRD_SQUEEZE Remove dummy dimension and convert data to
	double type.

	* Add FiltersToolbox/scinrrd_ndgrid.m:

	- Generation of arrays for 3D SCI NRRD image volumes.

2010-02-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
